Fixed artwork gap handling width changes

--- a/juke.less
+++ b/juke.less
@@ -74,9 +74,6 @@
 	color:transparent;
 	text-indent: 0;
 }
-.filler{
-	width: 125px;
-}
 #tapebox li{
 	list-style:none;
 	display:block;
